goit-markup-hw-02

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ body {
     color: #404bbf; 
 }
 .address-item {
-font-style: normal:
+    font-style: normal;
 }
 /*----/Header styles----*/
 /*----/Hero styles----*/
