--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    line-height: 1.17;
 }
 .logo-studio {
     color: #2e2f42;;
@@ -41,6 +42,7 @@ body {
     line-height: 1,50;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    line-height: 1.5;
 }
 .menu-link:hover,
 .menu-link:focus {
@@ -98,6 +100,8 @@ body {
     text-transform: capitalize;
     text-align: center;
     color: #2e2f42;
+    line-height: 1.11;
+    
 }
 .section-title-name {
     
@@ -105,19 +109,27 @@ font-weight: 500;
 font-size: 20px;
 letter-spacing: 0.02em;
 color: #2e2f42;
+line-height: 1.2;
 }
 .page-text {
 
 font-size: 16px;
 letter-spacing: 0.02em;
+line-height: 1.5;
 
 }
-.page-portfolio {
+.page-portfolio,
+.page-team {
     background-color: #F4F4FD;
 }
-.portfolio-list {
+.portfolio-list,
+.page-team-list {
     background-color: #FFFFFF;
 }
+.portfolio-item {
+    width: 360px;
+}
+
 /*----/Section styles----*/
 /*----Section footer----*/
 .logo-footer {
@@ -127,12 +139,14 @@ letter-spacing: 0.02em;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    line-height: 1.17;
 }
 .page-footer-text {
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+    line-height: 1.5;
 }
 .logo-studio-footer {
     color: #f4f4fd;
